--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-mask": "^16.3.9",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
