--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-oauth2-oidc": "^15.0.1",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^11.0.2",
     "ngx-mask": "^16.3.9",
