--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.config.json",
+    "start": "concurrently \"ng serve --proxy-config proxy.config.json\" \"nodemon --inspect server.js\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -20,10 +20,13 @@
     "@angular/platform-browser-dynamic": "^16.2.8",
     "@angular/router": "^16.2.8",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@spotify/web-api-ts-sdk": "^1.1.2",
     "angular-oauth2-oidc": "^15.0.1",
     "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^11.0.2",
     "ngx-mask": "^16.3.9",
