--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-auth-library": "^9.1.0",
+    "googleapis": "^127.0.0",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^11.0.2",
     "ngx-mask": "^16.3.9",
+    "nodemailer": "^6.9.6",
+    "nodemon": "^3.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
@@ -40,6 +44,7 @@
     "@angular-devkit/build-angular": "^16.2.2",
     "@angular/cli": "~16.2.2",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/express": "^4.17.19",
     "@types/jasmine": "~4.3.0",
     "angular-cli-ghpages": "^0.6.2",
     "concurrently": "^8.2.1",
