--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -25,4 +25,4 @@ jobs:
         env:
           SEND_KEY: ${{ secrets.SEND_KEY }}
         run: |
-          node server.ts
+          node server.js
