--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,13 +1,43 @@
-name: integration
+# name: integration
 
-on:
+# on:
+#   push:
+#     branches:
+#       - feature/server
+
+# jobs:
+#   send-email:
+#     runs-on: windows-latest
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: 14
+
+#       - name: Install dependencies
+#         run: npm install # ou yarn install, dependendo do seu gerenciador de pacotes
+
+#       - name: Run your code
+#         env:
+#           SEND_KEY: ${{ secrets.SEND_KEY }}
+#         run: |
+#           npm start
+
+          
+
+
+          on:
   push:
     branches:
       - feature/server
 
 jobs:
-  send-email:
-    runs-on: windows-latest
+  run-server:
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
@@ -19,10 +49,11 @@ jobs:
           node-version: 14
 
       - name: Install dependencies
-        run: npm install # ou yarn install, dependendo do seu gerenciador de pacotes
+        run: npm install
 
-      - name: Run your code
-        env:
+      - name: Start the server
+              env:
           SEND_KEY: ${{ secrets.SEND_KEY }}
         run: |
-          npm start
+          npm start &
+          echo "Server started in the background"
