--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,42 +1,12 @@
-# name: integration
+name: integration
 
-# on:
-#   push:
-#     branches:
-#       - feature/server
-
-# jobs:
-#   send-email:
-#     runs-on: windows-latest
-
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v2
-
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v2
-#         with:
-#           node-version: 14
-
-#       - name: Install dependencies
-#         run: npm install # ou yarn install, dependendo do seu gerenciador de pacotes
-
-#       - name: Run your code
-#         env:
-#           SEND_KEY: ${{ secrets.SEND_KEY }}
-#         run: |
-#           npm start
-
-          
-
-
-          on:
+on:
   push:
     branches:
       - feature/server
 
 jobs:
-  run-server:
+  send-email:
     runs-on: windows-latest
 
     steps:
@@ -49,11 +19,16 @@ jobs:
           node-version: 14
 
       - name: Install dependencies
-        run: npm install
+        run: npm install # ou yarn install, dependendo do seu gerenciador de pacotes
 
-      - name: Start the server
-              env:
+      - name: Run your code
+        env:
           SEND_KEY: ${{ secrets.SEND_KEY }}
         run: |
           npm start &
           echo "Server started in the background"
+
+          
+
+
+          
