--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -25,7 +25,8 @@ jobs:
         env:
           SEND_KEY: ${{ secrets.SEND_KEY }}
         run: |
-        node server.js
+          npm start &
+          echo "Server started in the background"
 
           
 
