--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -25,8 +25,7 @@ jobs:
         env:
           SEND_KEY: ${{ secrets.SEND_KEY }}
         run: |
-          npm start > /dev/null 2>&1 & 
-           echo "Server started in the background"
+          node server.js
 
           
 
