--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser-dynamic": "^16.2.8",
     "@angular/router": "^16.2.8",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@types/leaflet": "^1.9.7",
     "angular-oauth2-oidc": "^15.0.1",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-leaflet": "^0.0.16",
     "ngx-mask": "^16.3.9",
     "primeicons": "^6.0.1",
     "primeng": "^16.5.1",
