--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "leaflet-providers": "^2.0.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-leaflet": "^0.0.16",
     "ngx-mask": "^16.3.9",
